// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`k api > Snapshot tests (runtime: automatic) > basic usage should match snapshot 1`] = `
"
.🐻-4229161508 { font-size: 24px; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"div\\" className={\\"🐻-4229161508\\"}></__Box>;
}
"
`;

exports[`k api > Snapshot tests (runtime: automatic) > should match snapshot when k is used more than once 1`] = `
"
.🐻-4229161508 { font-size: 24px; } .🐻-4229161508 { font-size: 24px; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"div\\" className={\\"🐻-4229161508\\"}><__Box as=\\"div\\" className={\\"🐻-4229161508\\"}></__Box></__Box>;
}
"
`;

exports[`k api > Snapshot tests (runtime: automatic) > using className prop should match snapshot 1`] = `
"
.kuma-1440123820{box-shadow:0 1px 2px 0 rgba(0, 0, 0, 0.05);}.🐻-2131929892 { padding: 2px; }.🐻-2131929892:hover { color: red; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k, css } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"div\\" className={\`🐻-2131929892 \${\\"kuma-1440123820\\"}\`} />;
}
"
`;

exports[`k api > Snapshot tests (runtime: automatic) > using pseudo elements should match snapshot 1`] = `
"
.🐻-2631981251 { padding: 2px; }.🐻-2631981251:after { color: blue; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"div\\" className={\\"🐻-2631981251\\"} />;
}
"
`;

exports[`k api > Snapshot tests (runtime: automatic) > using pseudo props should match snapshot 1`] = `
"
.🐻-2131929892 { padding: 2px; }.🐻-2131929892:hover { color: red; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"span\\" className={\\"🐻-2131929892\\"} />;
}
"
`;

exports[`k api > Snapshot tests (runtime: automatic) > using responsive props should match snapshot 1`] = `
"
.🐻-401969115 { font-size: 16px; }@media (min-width: 576px) { .🐻-401969115 { font-size: 24px; } }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"a\\" className={\\"🐻-401969115\\"} />;
}
"
`;

exports[`k api > Snapshot tests (runtime: automatic) > using space props should match snapshot 1`] = `
"
.🐻-3206633536 { padding: 2px; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"div\\" className={\\"🐻-3206633536\\"} />;
}
"
`;

exports[`k api > Snapshot tests (runtime: classic) > basic usage should match snapshot 1`] = `
"
.🐻-4229161508 { font-size: 24px; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"div\\" className={\\"🐻-4229161508\\"}></__Box>;
}
"
`;

exports[`k api > Snapshot tests (runtime: classic) > should match snapshot when k is used more than once 1`] = `
"
.🐻-4229161508 { font-size: 24px; } .🐻-4229161508 { font-size: 24px; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"div\\" className={\\"🐻-4229161508\\"}><__Box as=\\"div\\" className={\\"🐻-4229161508\\"}></__Box></__Box>;
}
"
`;

exports[`k api > Snapshot tests (runtime: classic) > using className prop should match snapshot 1`] = `
"
.kuma-1440123820{box-shadow:0 1px 2px 0 rgba(0, 0, 0, 0.05);}.🐻-2131929892 { padding: 2px; }.🐻-2131929892:hover { color: red; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k, css } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"div\\" className={\`🐻-2131929892 \${\\"kuma-1440123820\\"}\`} />;
}
"
`;

exports[`k api > Snapshot tests (runtime: classic) > using pseudo elements should match snapshot 1`] = `
"
.🐻-2631981251 { padding: 2px; }.🐻-2631981251:after { color: blue; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"div\\" className={\\"🐻-2631981251\\"} />;
}
"
`;

exports[`k api > Snapshot tests (runtime: classic) > using pseudo props should match snapshot 1`] = `
"
.🐻-2131929892 { padding: 2px; }.🐻-2131929892:hover { color: red; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"span\\" className={\\"🐻-2131929892\\"} />;
}
"
`;

exports[`k api > Snapshot tests (runtime: classic) > using responsive props should match snapshot 1`] = `
"
.🐻-401969115 { font-size: 16px; }@media (min-width: 576px) { .🐻-401969115 { font-size: 24px; } }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"a\\" className={\\"🐻-401969115\\"} />;
}
"
`;

exports[`k api > Snapshot tests (runtime: classic) > using space props should match snapshot 1`] = `
"
.🐻-3206633536 { padding: 2px; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"div\\" className={\\"🐻-3206633536\\"} />;
}
"
`;

exports[`k api > Snapshot tests (runtime: undefined) > basic usage should match snapshot 1`] = `
"
.🐻-4229161508 { font-size: 24px; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"div\\" className={\\"🐻-4229161508\\"}></__Box>;
}
"
`;

exports[`k api > Snapshot tests (runtime: undefined) > should match snapshot when k is used more than once 1`] = `
"
.🐻-4229161508 { font-size: 24px; } .🐻-4229161508 { font-size: 24px; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"div\\" className={\\"🐻-4229161508\\"}><__Box as=\\"div\\" className={\\"🐻-4229161508\\"}></__Box></__Box>;
}
"
`;

exports[`k api > Snapshot tests (runtime: undefined) > using className prop should match snapshot 1`] = `
"
.kuma-1440123820{box-shadow:0 1px 2px 0 rgba(0, 0, 0, 0.05);}.🐻-2131929892 { padding: 2px; }.🐻-2131929892:hover { color: red; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k, css } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"div\\" className={\`🐻-2131929892 \${\\"kuma-1440123820\\"}\`} />;
}
"
`;

exports[`k api > Snapshot tests (runtime: undefined) > using pseudo elements should match snapshot 1`] = `
"
.🐻-2631981251 { padding: 2px; }.🐻-2631981251:after { color: blue; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"div\\" className={\\"🐻-2631981251\\"} />;
}
"
`;

exports[`k api > Snapshot tests (runtime: undefined) > using pseudo props should match snapshot 1`] = `
"
.🐻-2131929892 { padding: 2px; }.🐻-2131929892:hover { color: red; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"span\\" className={\\"🐻-2131929892\\"} />;
}
"
`;

exports[`k api > Snapshot tests (runtime: undefined) > using responsive props should match snapshot 1`] = `
"
.🐻-401969115 { font-size: 16px; }@media (min-width: 576px) { .🐻-401969115 { font-size: 24px; } }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"a\\" className={\\"🐻-401969115\\"} />;
}
"
`;

exports[`k api > Snapshot tests (runtime: undefined) > using space props should match snapshot 1`] = `
"
.🐻-3206633536 { padding: 2px; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return <__Box as=\\"div\\" className={\\"🐻-3206633536\\"} />;
}
"
`;
